调整功能
